# tuffy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  book.toml  deny.toml  pyproject.toml  rust-toolchain.toml
.devcontainer/: devcontainer.json
docs/: SUMMARY.md  initial.md  introduction.md  mir_to_tuffy_ir.md  references.md  spec.md
lean/: TuffyLean.lean  lake-manifest.json  lakefile.toml
mir_dump/: tls_test.main-X-__rust_std_internal_init_fn.-------.nll.0.mir  tls_test.main-X-__rust_std_internal_init_fn.-------.renumber.0.mir  tls_test.main-X-__rust_std_internal_init_fn.1-1-000.built.after.mir  tls_test.main-X-__rust_std_internal_init_fn.1-1-006.SimplifyCfg-initial.after.mir  tls_test.main-X-__rust_std_internal_init_fn.1-1-006.SimplifyCfg-initial.before.mir  tls_test.main-X-__rust_std_internal_init_fn.1-1-008.PromoteTemps.after.mir  tls_test.main-X-__rust_std_internal_init_fn.1-1-008.PromoteTemps.before.mir  tls_test.main-X-__rust_std_internal_init_fn.1-1-009.SimplifyCfg-promote-consts.after.mir  (+662 more)
rustc_codegen_tuffy/: Cargo.toml  README.md
rustc_codegen_tuffy/rustlantis/: fuzz_interp.py
rustc_codegen_tuffy/rustlantis/patch/: config.toml  fuzz.py  fuzz.sh  tuffy-backend.patch
rustc_codegen_tuffy/src/: allocator.rs  config.rs  lib.rs  main_shim.rs  mir_to_ir.rs  rust_try.rs  static_data.rs
rustc_codegen_tuffy/src/driver/: aot.rs  mod.rs
rustc_codegen_tuffy/src/driver/aot/: batch.rs  dump.rs  merge.rs  mod.rs  tests.rs
rustc_codegen_tuffy/src/mir_to_ir/: call.rs  constant.rs  ctx.rs  discriminant.rs  fat_ptr.rs  intrinsic.rs  local_analysis.rs  mod.rs  operand.rs  place.rs  rvalue.rs  simd.rs  statement.rs  terminator.rs  types.rs  wide_arith.rs
rustc_codegen_tuffy/src/mir_to_ir/call/: emit.rs  intrinsic.rs  mod.rs  resolve.rs
rustc_codegen_tuffy/src/mir_to_ir/intrinsic/: arith.rs  atomic.rs  bit.rs  float.rs  memory.rs  mod.rs
rustc_codegen_tuffy/src/mir_to_ir/rvalue/: aggregate.rs  binary.rs  cast.rs  mod.rs
rustc_codegen_tuffy/src/mir_to_ir/simd/: binop.rs  cast.rs  float.rs  info.rs  lane.rs  mod.rs  storage.rs  unary.rs
rustc_codegen_tuffy/src/mir_to_ir/statement/: assign.rs  mod.rs
rustc_codegen_tuffy/src/mir_to_ir/terminator/: drop_.rs  inline_asm.rs  mod.rs  panic.rs  return_.rs  switch.rs
rustc_codegen_tuffy/tests/: doctest-exclude.txt  memops.mir  normalize-ir.sh  run-build-std-tests.sh  run-codegen-tests.sh  run-crate-tests.sh  run-doctest.sh  run-pass-exclude.txt  run-pass-tests.sh  run-quick-tests.sh  run-stdlib-tests.sh  run-tests.sh  run-ui-tests.sh  rustc-wrapper-tuffy.sh  ui-exclude.txt  update-codegen-test.sh
rustc_codegen_tuffy/tests/codegen/: float_cmp.rs
rustc_codegen_tuffy/tests/codegen/abi/: byval.rs  sret.rs
rustc_codegen_tuffy/tests/codegen/call/: aligned_memcopy.rs  byval.rs  constant_tuple_arg.rs  double_width_return.rs  range_next_option.rs  split_at_mut.rs  split_at_mut_destructure.rs  sret.rs  wide_scalar_newtype.rs
rustc_codegen_tuffy/tests/codegen/intrinsic/: atomic_ops.rs  bit_manip.rs  carrying_mul_add.rs  fence.rs  float_minmax.rs  memops.rs  ptr_arith.rs  ptr_offset.rs  rotate.rs  rotate_u128.rs  saturating.rs  simd_cast.rs  simd_fma.rs  simd_insert_extract.rs  simd_shift.rs  type_info.rs  unchecked_arith.rs
rustc_codegen_tuffy/tests/codegen/intrinsics/: memops.rs
rustc_codegen_tuffy/tests/codegen/rvalue/: add.rs  bitops.rs  cast.rs  cast_f64_i128_u128.rs  cast_u16_i128.rs  checked_mul.rs  cmp.rs  div.rs  fat_ptr_reborrow.rs  float.rs  float_cmp.rs  mul.rs  niche_some_move.rs  not.rs  provenance_cast.rs  ptr_metadata.rs  repeat_large_const.rs  select.rs  shift.rs  sub.rs  unary.rs  wrapping.rs
rustc_codegen_tuffy/tests/codegen/terminator/: constant_tuple_arg.rs  switch.rs  switch_loop_carried.rs
rustc_codegen_tuffy/tests/fixtures/: aggregate_eq_cfg.rs  alloc_result_fat_ptr.rs  array_iter_enumerate.rs  box_dyn_from_raw.rs  catch_unwind_call_cleanup.rs  const_fn_unsize.rs  const_generic_repeat.rs  const_slice_of_str_refs.rs  fat_ptr_field_assign.rs  float_array_sum_identity.rs  funnel_shift_narrow.rs  generic_fat_field.rs  never_result.rs  raw_slice_ptr_hash.rs  shl_truncation.rs  signed_cmp_narrow.rs  smul_overflow_128.rs  stack_thin_to_slice_unsize.rs  thread_spawn.rs  trait_object_branch_vtable.rs  trait_sret_self_deref.rs  umul_overflow_64.rs  zst_closure_rust_call.rs
rustc_codegen_tuffy/tests/patches/: syn-nightly-2026-03-28.patch
tests/: run-tests.sh  (+1 more)
tuffy_codegen/: Cargo.toml  README.md
tuffy_codegen/src/: emit.rs  encode.rs  isel.rs  legalize.rs  lib.rs  tests.rs
tuffy_codegen/tests/: e2e.rs
tuffy_ir_interp/: Cargo.toml  README.md  fuzz.sh
tuffy_ir_interp/src/: exec.rs  interp.rs  lib.rs  main.rs  memory.rs  value.rs
tuffy_ir_interp/tests/: interp_tests.rs
tuffy_opt/: Cargo.toml  README.md  build.rs
tuffy_opt/src/: at_use.rs  bulk_memory.rs  cfg.rs  cfg_cleanup.rs  dce.rs  dse.rs  inline.rs  lib.rs  peephole.rs  promote.rs  range.rs  scalar_swap.rs  tailrec.rs  tests.rs
tuffy_target_x86/: Cargo.toml  README.md
tuffy_target_x86/src/: backend.rs  emit.rs  encode.rs  frame.rs  inst.rs  isel.rs  isel_gen.rs  legality.rs  legalize.rs  lib.rs  reg.rs  regalloc_impl.rs  tests.rs
tuffy_target_x86/tests/: e2e.rs  regbank.rs
(+165 files in other folders)
