[package]
name = "rustc_codegen_tuffy"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["dylib"]

[dependencies]
tuffy_ir = { path = "../tuffy_ir" }
tuffy_codegen = { path = "../tuffy_codegen" }
tuffy_target = { path = "../tuffy_target" }

[package.metadata.rust-analyzer]
rustc_private = true
