[package]
name = "rustc_codegen_tuffy"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["dylib"]

[dependencies]
tuffy_ir = { path = "../tuffy_ir" }
tuffy_codegen = { path = "../tuffy_codegen" }
tuffy_target = { path = "../tuffy_target" }

[package.metadata.rust-analyzer]
rustc_private = true
