[package]
name = "rustc_codegen_tuffy"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["dylib"]

[lints.rust]
missing_docs = "deny"

[lints.clippy]
missing_docs_in_private_items = "deny"
allow_attributes_without_reason = "deny"
missing_panics_doc = "deny"
missing_errors_doc = "deny"

[dependencies]
tuffy_ir = { path = "../tuffy_ir" }
tuffy_opt = { path = "../tuffy_opt" }
tuffy_target = { path = "../tuffy_target" }
tuffy_codegen = { path = "../tuffy_codegen" }
num-bigint = "0.4"

[package.metadata.rust-analyzer]
rustc_private = true
