[package]
name = "tuffy_codegen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tuffy_ir = { path = "../tuffy_ir" }
tuffy_target = { path = "../tuffy_target" }
tuffy_target_x86 = { path = "../tuffy_target_x86" }
object = { version = "0.36", features = ["write"] }
