[package]
name = "tuffy_ir_interp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "tuffy-interp"
path = "src/main.rs"

[dependencies]
tuffy_ir = { path = "../tuffy_ir" }
num-bigint = "0.4"
num-traits = "0.2"
rustc_apfloat = "0.2.3+llvm-462a31f5a5ab"
