[package]
name = "tuffy_target_x86"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tuffy_ir = { path = "../tuffy_ir" }
tuffy_target = { path = "../tuffy_target" }
object = { version = "0.36", features = ["write"] }
num-bigint = "0.4"
num-traits = "0.2"

[dev-dependencies]
tempfile = "3"
